2015-02-01
	* Add a "Request" named model.
	* The optimization framework architecture.


2015-01-30
	* Support for MySQL of the database.
	* Version 0.4 released.


2015-01-28
	* Support for exception control.
	* Version 0.3 released.


2015-01-27
	* Support for params (GET and POST).
	* Bugfix.


2015-01-26
	* Support for rewrite.
	* Version 0.2 released.


2015-01-25

	* The first public version.
	* Version 0.1 released.