@@ -1,4 +1,12 @@
 <?php
+// +------------------------------------------------------------
+// | Micro Framework
+// +------------------------------------------------------------
+// | Source: https://github.com/jasonweicn/MicroFramework
+// +------------------------------------------------------------
+// | Author: Jason.wei <jasonwei06@hotmail.com>
+// +------------------------------------------------------------
+
 class Request
 {
     /**
