@@ -1,3 +1,9 @@
+2015-02-02
+	* The optimization.
+	* Add "insertAll" method of the MySQL.
+	* Add "sendHttp404" method of the Exceptions.
+
+
 2015-02-01
 	* Add a "Request" named model.
 	* The optimization framework architecture.
